appstream: add support for translations

Recognize xml:lang tags in the appstream files and use them to
provide translated names, summaries and descriptions.

https://bugzilla.gnome.org/show_bug.cgi?id=707728

Signed-off-by: Richard Hughes <richard@hughsie.com>